<resources>
    <string name="app_name">Beauty Route</string>
    <string name="user_photo">Фото пользователя</string>
    <string name="next">Далее</string>
    <string name="duration">Длительность</string>
    <string name="cost">Стоимость</string>
    <string name="location">Адрес</string>
    <string name="icon_edit_profile">Иконка управление профилем</string>
    <string name="icon_graphic">Иконка график</string>
    <string name="add">Добавить</string>
    <string name="edit">Изменить</string>
    <string name="icon_busy_day">Иконка занятый день</string>
    <string name="add_photo">Добавить изображение</string>
    <string name="more_info">Узнать больше</string>
    <string name="exclude">Исключить</string>
    <string name="expand">Раскрыть</string>
    <string name="service_result_photo">Фото результата услуги</string>
    <string name="save">Сохранить</string>
    <string name="registration">Регистрация</string>
    <string name="cancel">ОТМЕНИТЬ</string>
    <string name="log_in">Войдите в аккаунт</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="authorize">Авторизироваться</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="manage_profile">Управление профилем</string>
    <string name="schedule">График работы</string>
    <string name="my_services">Мои услуги</string>
    <string name="name">Имя</string>
    <string name="hint_name">Иван Иванов</string>
    <string name="phone">Телефон</string>
    <string name="hint_phone">+78005553535</string>
    <string name="hint_password">Ваш пароль</string>
    <string name="city">Город</string>
    <string name="hint_city">Москва</string>
    <string name="about_self">О себе</string>
    <string name="add_service_description">Добавьте описание услуги</string>
    <string name="empty_search_layout_stub">Находите мастеров в поиске и записывайтесь на приём, чтобы увидеть избранных мастеров</string>
    <string name="services">Услуги</string>
    <string name="no_free_time">В этот день нет свободного времени</string>
    <string name="gallery">Галерея</string>
    <string name="tell_about_self">Расскажите о себе</string>
    <string name="favourite_people">Избранные мастера</string>
    <string name="nearest_appointment">Ближайшая запись</string>
    <string name="make_appointment">Записаться</string>
    <string name="search">Поиск</string>
    <string name="appointments">Записи</string>
    <string name="profile">Профиль</string>
    <string name="choose_day">Выбрать день</string>
    <string name="service_name">Название услуги</string>
    <string name="add_service">Добавить услугу</string>
    <string name="hint_email">your@email.com</string>
    <string name="bad_email">Проверьте формат адреса электронной почты.</string>
    <string name="weak_password">Слишком слабый пароль.</string>
    <string name="user_created">Аккаунт создан! На ваш адрес электронной почты выслано письмо с подтверждением!</string>
    <string name="email_collision">Аккаунт с таким адресом электронной почты уже существует.</string>
    <string name="error">Ошибка.</string>
    <string name="error_network">Проверьте соединение с Интернетом.</string>
    <string name="error_web">Ошибка веб-клиента.</string>
    <string name="too_many_requests">Вы делаете запросы слишком часто. Пожалуйста, повторите чуть позже.</string>
    <string name="api_not_available">Данный функционал не поддерживается на вашем устройстве. Возможно, у вас не установлен GooglePlay Service.</string>
    <string name="email">Адрес электронной почты.</string>
    <string name="empty_inputs">Заполните все необходимые поля.</string>
    <string name="wrong_password">Неверный пароль.</string>
    <string name="user_not_found">Пользователя с таким адресом электронной почты не существует.</string>
    <string name="email_sent">Письмо отправлено! Перейдите по ссылке, чтобы подтвердить свой адрес электронной почты!</string>
    <string name="wrong_credentials">Неверные данные для входа.</string>
    <string name="email_too_many_requests">Письмо выслано недавно. Пожалуйста, перейдите по ссылке в нём и немного подождите.</string>
    <string name="remember">Запомнить</string>
    <string name="hint_last_password">Для смены пароля, введите действующий</string>
    <string name="last_password">Текущий пароль</string>
    <string name="appointment_here">appointment here</string>
    <string name="add_to_favourites">Добавить в избранные</string>

</resources>