<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_back">

        <ImageView
            android:id="@+id/photo_edit_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="@dimen/side_margin"
            android:contentDescription="@string/user_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile" />

        <ImageView
            android:id="@+id/icon_photo_edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/edit"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/photo_edit_profile"
            app:layout_constraintEnd_toEndOf="@id/photo_edit_profile"
            app:srcCompat="@drawable/ic_edit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo_edit_profile">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="@dimen/big_side_margin"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/email"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/edit_set_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_16_rectangle"
                android:backgroundTint="@color/beige"
                android:ellipsize="end"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="@dimen/big_side_margin"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/name"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/edit_set_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_16_rectangle"
                android:backgroundTint="@color/beige"
                android:ellipsize="end"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLines="1"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="@dimen/big_side_margin"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/phone"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/edit_set_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="8dp"
                android:autofillHints="phone"
                android:background="@drawable/rounded_16_rectangle"
                android:backgroundTint="@color/beige"
                android:ellipsize="end"
                android:ems="10"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:lines="1"
                android:maxLines="1"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="@dimen/big_side_margin"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/password"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/edit_set_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_16_rectangle"
                android:backgroundTint="@color/beige"
                android:ellipsize="end"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textVisiblePassword"
                android:lines="1"
                android:maxLines="1"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="@dimen/big_side_margin"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/last_password"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/edit_last_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_16_rectangle"
                android:backgroundTint="@color/beige"
                android:ellipsize="end"
                android:ems="10"
                android:hint="@string/hint_last_password"
                android:inputType="textVisiblePassword"
                android:lines="1"
                android:maxLines="1"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="@dimen/big_side_margin"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/city"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/edit_set_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="8dp"
                android:autofillHints="postalAddress"
                android:background="@drawable/rounded_16_rectangle"
                android:backgroundTint="@color/beige"
                android:ellipsize="end"
                android:ems="10"
                android:hint="@string/hint_city"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="@dimen/big_side_margin"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/about_self"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginVertical="8dp"
                android:background="@drawable/border_edit_text"
                android:gravity="start"
                android:hint="@string/tell_about_self"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="64dp"
                android:padding="16dp"
                android:textSize="@dimen/small_text"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>