<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_back">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="@dimen/big_side_margin"
                android:lines="1"
                android:text="@string/name"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/edit_set_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:background="@drawable/rounded_16_rectangle"
                android:backgroundTint="@color/beige"
                android:lines="1"
                android:ems="10"
                android:maxLines="1"
                android:hint="@string/hint_name"
                android:inputType="textVisiblePassword"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="@dimen/big_side_margin"
                android:lines="1"
                android:text="@string/phone"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/edit_set_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="8dp"
                android:autofillHints="phone"
                android:background="@drawable/rounded_16_rectangle"
                android:backgroundTint="@color/beige"
                android:lines="1"
                android:ems="10"
                android:maxLines="1"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="@dimen/big_side_margin"
                android:lines="1"
                android:text="@string/email"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/edit_set_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="8dp"
                android:autofillHints="phone"
                android:background="@drawable/rounded_16_rectangle"
                android:backgroundTint="@color/beige"
                android:lines="1"
                android:ems="10"
                android:maxLines="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:lines="1"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/password"
                android:textSize="@dimen/small_text" />

            <EditText
                android:id="@+id/edit_set_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_16_rectangle"
                android:backgroundTint="@color/beige"
                android:lines="1"
                android:ems="10"
                android:maxLines="1"
                android:hint="@string/hint_password"
                android:inputType="textVisiblePassword"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:layout_marginTop="@dimen/big_side_margin"
                android:lines="1"
                android:text="@string/city"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/edit_set_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_side_margin"
                android:lines="1"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:autofillHints="postalAddress"
                android:background="@drawable/rounded_16_rectangle"
                android:backgroundTint="@color/beige"
                android:ems="10"
                android:hint="@string/hint_city"
                android:inputType="textVisiblePassword"
                android:padding="16dp" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/big_side_margin"
                android:backgroundTint="@color/orange"
                android:elegantTextHeight="true"
                android:ellipsize="end"
                android:lines="1"
                android:maxWidth="300dp"
                android:text="@string/register"
                android:textSize="@dimen/medium_text" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>