<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white_back">

    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:background="@drawable/rounded_16_rectangle"
        android:backgroundTint="@color/beige"
        android:ems="10"
        android:hint="@string/phone_number"
        android:lines="1"
        android:maxLines="1"
        android:inputType="phone"
        android:minWidth="250dp"
        android:padding="16dp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:background="@drawable/rounded_16_rectangle"
        android:backgroundTint="@color/beige"
        android:ems="10"
        android:lines="1"
        android:maxLines="1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minWidth="250dp"
        android:padding="16dp" />


    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:elegantTextHeight="true"
        android:text="@string/authorize"
        android:textSize="@dimen/medium_text" />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingBottom="2dp"
        android:text="@string/register"
        android:lines="1"
        android:textColor="@color/grey"
        android:textSize="@dimen/medium_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ic_sign_up" />

    <ImageView
        android:id="@+id/ic_sign_up"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/next"
        android:paddingVertical="6dp"
        app:layout_constraintBottom_toBottomOf="@id/text_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_sign_up"
        app:srcCompat="@drawable/ic_right"
        app:tint="@color/grey" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="title_login,edit_phone,edit_password,sign_in"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:flow_verticalGap="24dp"
        app:flow_verticalStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>